// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiAspectRatio is rendered 1`] = `
<iframe
  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
  allowfullscreen=""
  aria-label="aria-label"
  class="euiAspectRatio testClass1 testClass2"
  data-test-subj="test subject string"
  frameborder="0"
  height="315"
  src="https://www.youtube.com/embed/yJarWSLRM24"
  style="aspect-ratio:9 / 4;height:100%;width:100%"
  title="Elastic is a search company"
  width="560"
/>
`;

exports[`EuiAspectRatio props maxWidth is rendered 1`] = `
<div
  style="max-width:500px"
>
  <iframe
    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
    allowfullscreen=""
    aria-label="aria-label"
    class="euiAspectRatio testClass1 testClass2"
    data-test-subj="test subject string"
    frameborder="0"
    height="315"
    src="https://www.youtube.com/embed/yJarWSLRM24"
    style="aspect-ratio:9 / 16;height:100%;width:100%"
    title="Elastic is a search company"
    width="560"
  />
</div>
`;
